--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,12 @@
 main: me.mattyhd0.chatcolor.ChatColorPlugin
 name: 'ChatColor'
-version: '${project.version}'
+version: '${version}'
 api-version: 1.13
 description: 'A plugin that allows you to create color patterns for the chat'
 author: MattyHD0
 softdepend: [PlaceholderAPI]
+libraries:
+  - com.zaxxer:HikariCP:6.2.1
 commands:
   chatcolor:
     description: ChatColor main command
