--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ api-version: 1.13
 description: 'A plugin that allows you to create color patterns for the chat'
 author: MattyHD0
 softdepend: [PlaceholderAPI]
+folia-supported: true
 libraries:
   - com.zaxxer:HikariCP:6.2.1
 commands:
